--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       </div>
       <div class="navbar-end">
         <a class="navbar-item" href="index.html">Projects</a>
-        <a class="navbar-item"> Resume</a>
+        <a class="navbar-item" href="resume.html" target="_blank"> Resume</a>
         <a class="navbar-item" href="about.html">About</a>
       </div>
     </div>
