--- a/project.html
+++ b/project.html
@@ -12,7 +12,7 @@
 
 <body>
     <nav class="navbar is-light pt-5 pb-5" role="navigation" aria-label="main navigation">
-        <div class="container">
+        <div class="container ">
             <div class="navbar-brand">
                 <div>
                     <h1 class="title">Kahlys</h1>
@@ -29,7 +29,7 @@
 
     <section class="section">
         <div class="container">
-            <h1 class="title">About</h1>
+            <h1 class="title">Project</h1>
         </div>
     </section>
 </body>
