--- a/index.html
+++ b/index.html
@@ -29,7 +29,42 @@
 
     <section class="section">
         <div class="container">
-            <h1 class="title">About</h1>
+            <h1 class="title">Bio</h1>
+        </div>
+    </section>
+
+    <section class="section">
+        <div class="container">
+            <h1 class="title">Music</h1>
+
+            <p><em>Some music I have composed...</em></p>
+
+            <div class="columns is-multiline mt-1">
+                <div class="column is-one-third">
+                    <figure class="image is-16by9">
+                        <iframe class="has-ratio" width="100%" height="auto" src="https://youtube.com/embed/LEbtlhpPrKc"
+                            allowfullscreen></iframe>
+                    </figure>
+                </div>
+                <div class="column is-one-third">
+                    <figure class="image is-16by9">
+                        <iframe class="has-ratio" width="100%" height="auto" src="https://youtube.com/embed/V0cKVlCKARU"
+                            allowfullscreen></iframe>
+                    </figure>
+                </div>
+                <div class="column is-one-third">
+                    <figure class="image is-16by9">
+                        <iframe class="has-ratio" width="100%" height="auto" src="https://youtube.com/embed/k3vKDIJkVi8"
+                            allowfullscreen></iframe>
+                    </figure>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="section">
+        <div class="container">
+            <h1 class="title">Recommendation</h1>
         </div>
     </section>
 </body>
