--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
     <title>Kahlys</title>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css" />
+
+    <style>
+        img {
+            transition: filter .5s ease-in-out;
+            -webkit-filter: grayscale(0%);
+            filter: grayscale(0%);
+        }
+
+        img:hover {
+            -webkit-filter: grayscale(100%) brightness(70%);
+            filter: grayscale(100%) brightness(70%);
+        }
+    </style>
 </head>
 
 <body>
@@ -64,7 +77,76 @@
 
     <section class="section">
         <div class="container">
-            <h1 class="title">Recommendation</h1>
+            <h1 class="title">Recommendations</h1>
+
+            <h2 class="is-size-4">My favorite music albums</h2>
+
+            <div class="columns is-multiline mt-1">
+                <div class="column is-one-quarter">
+                    <a href="https://songwhip.com/rodolphe-burger/good-alive" target="_blank">
+                        <img src="/static/img/album_good.webp" alt="" />
+                    </a>
+                </div>
+                <div class="column is-one-quarter">
+                    <a href="https://songwhip.com/coeur-de-pirate/en-cas-de-tempete-ce-jardin-sera-ferme"
+                        target="_blank">
+                        <img src="/static/img/album_tempete.webp" alt="" />
+                    </a>
+                </div>
+                <div class="column is-one-quarter">
+                    <a href="https://songwhip.com/daft-punk/random-access-memories" target="_blank">
+                        <img src="/static/img/album_ram.webp" alt="" />
+                    </a>
+                </div>
+                <div class="column is-one-quarter">
+                    <a href="https://songwhip.com/stupeflip/stup-virus-2017" target="_blank">
+                        <img src="/static/img/album_stup.webp" alt="" />
+                    </a>
+                </div>
+            </div>
+
+            <h2 class="is-size-4">My favorite movies</h2>
+
+            <div class="columns is-multiline mt-1">
+                <div class="column is-one-quarter">
+                    <a href="https://www.themoviedb.org/movie/414906-the-batman" target="_blank"> <img
+                            src="/static/img/movie_batman.jpeg" alt="" /></a>
+                </div>
+                <div class="column is-one-quarter">
+                    <a href="https://www.themoviedb.org/movie/496243" target="_blank"> <img
+                            src="/static/img/movie_parasite.jpeg" alt="" /></a>
+                </div>
+                <div class="column is-one-quarter">
+                    <a href="https://www.themoviedb.org/movie/68730-silence" target="_blank"> <img
+                            src="/static/img/movie_silence.jpeg" alt="" /></a>
+                </div>
+                <div class="column is-one-quarter">
+                    <a href="https://www.themoviedb.org/movie/13223-gran-torino" target="_blank"> <img
+                            src="/static/img/movie_torino.jpeg" alt="" /></a>
+                </div>
+            </div>
+
+            <h2 class="is-size-4">My favorite tv shows</h2>
+
+            <div class="columns is-multiline mt-1">
+                <div class="column is-one-quarter">
+                    <a href="https://www.themoviedb.org/tv/63247-westworld" target="_blank"> <img
+                            src="/static/img/tv_westworld.jpeg" alt="" /></a>
+                </div>
+                <div class="column is-one-quarter">
+                    <a href="https://www.themoviedb.org/tv/62476-le-bureau-des-l-gendes" target="_blank"> <img
+                            src="/static/img/tv_lbdl.jpeg" alt="" /></a>
+                </div>
+                <div class="column is-one-quarter">
+                    <a href="https://www.themoviedb.org/tv/19885-sherlock" target="_blank"> <img
+                            src="/static/img/tv_sherlock.jpeg" alt="" /></a>
+                </div>
+                <div class="column is-one-quarter">
+                    <a href="https://www.themoviedb.org/tv/894-the-prisoner" target="_blank"> <img
+                            src="/static/img/tv_prisonnier.jpeg" alt="" /></a>
+                </div>
+            </div>
+
         </div>
     </section>
 </body>
