--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
-
-<head>
+  <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -10,145 +9,131 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css" />
 
     <style>
-        img {
-            transition: filter .5s ease-in-out;
-            -webkit-filter: grayscale(0%);
-            filter: grayscale(0%);
-        }
+      img {
+        transition: filter 0.5s ease-in-out;
+        -webkit-filter: grayscale(0%);
+        filter: grayscale(0%);
+      }
 
-        img:hover {
-            -webkit-filter: grayscale(100%) brightness(70%);
-            filter: grayscale(100%) brightness(70%);
-        }
+      img:hover {
+        -webkit-filter: grayscale(100%) brightness(70%);
+        filter: grayscale(100%) brightness(70%);
+      }
     </style>
-</head>
+  </head>
 
-<body>
+  <body>
     <nav class="navbar is-light pt-5 pb-5" role="navigation" aria-label="main navigation">
-        <div class="container">
-            <div class="navbar-brand">
-                <div>
-                    <h1 class="title">Kahlys</h1>
-                    <p class="subtitle"><strong>Golang Developer</strong> <em>& cryptographer</em></p>
-                </div>
-            </div>
-            <div class="navbar-end">
-                <a class="navbar-item" href="index.html">About</a>
-                <a class="navbar-item" href="project.html">Projects</a>
-                <a class="navbar-item" href="resume.html" target="_blank"> Resume</a>
-            </div>
+      <div class="container">
+        <div class="navbar-brand">
+          <div>
+            <h1 class="title">Kahlys</h1>
+            <p class="subtitle"><strong>Golang Developer</strong> <em>& cryptographer</em></p>
+          </div>
         </div>
+        <div class="navbar-end">
+          <a class="navbar-item" href="index.html">About</a>
+          <a class="navbar-item" href="project.html">Projects</a>
+          <a class="navbar-item" href="resume.html" target="_blank"> Resume</a>
+        </div>
+      </div>
     </nav>
 
     <section class="section">
-        <div class="container">
-            <h1 class="title">Bio</h1>
-        </div>
+      <div class="container">
+        <h1 class="title">Bio</h1>
+      </div>
     </section>
 
     <section class="section">
-        <div class="container">
-            <h1 class="title">Music</h1>
+      <div class="container">
+        <h1 class="title">Music</h1>
 
-            <p><em>Some music I have composed...</em></p>
+        <p><em>Some music I have composed...</em></p>
 
-            <div class="columns is-multiline mt-1">
-                <div class="column is-one-third">
-                    <figure class="image is-16by9">
-                        <iframe class="has-ratio" width="100%" height="auto" src="https://youtube.com/embed/LEbtlhpPrKc"
-                            allowfullscreen></iframe>
-                    </figure>
-                </div>
-                <div class="column is-one-third">
-                    <figure class="image is-16by9">
-                        <iframe class="has-ratio" width="100%" height="auto" src="https://youtube.com/embed/V0cKVlCKARU"
-                            allowfullscreen></iframe>
-                    </figure>
-                </div>
-                <div class="column is-one-third">
-                    <figure class="image is-16by9">
-                        <iframe class="has-ratio" width="100%" height="auto" src="https://youtube.com/embed/k3vKDIJkVi8"
-                            allowfullscreen></iframe>
-                    </figure>
-                </div>
-            </div>
+        <div class="columns is-multiline mt-1">
+          <div class="column is-one-third">
+            <figure class="image is-16by9">
+              <iframe class="has-ratio" width="100%" height="auto" src="https://youtube.com/embed/LEbtlhpPrKc" allowfullscreen></iframe>
+            </figure>
+          </div>
+          <div class="column is-one-third">
+            <figure class="image is-16by9">
+              <iframe class="has-ratio" width="100%" height="auto" src="https://youtube.com/embed/V0cKVlCKARU" allowfullscreen></iframe>
+            </figure>
+          </div>
+          <div class="column is-one-third">
+            <figure class="image is-16by9">
+              <iframe class="has-ratio" width="100%" height="auto" src="https://youtube.com/embed/k3vKDIJkVi8" allowfullscreen></iframe>
+            </figure>
+          </div>
         </div>
+      </div>
     </section>
 
     <section class="section">
-        <div class="container">
-            <h1 class="title">Recommendations</h1>
+      <div class="container">
+        <h1 class="title">Recommendations</h1>
 
-            <h2 class="is-size-4">My favorite music albums</h2>
+        <h2 class="is-size-4">My favorite music albums</h2>
 
-            <div class="columns is-multiline mt-1">
-                <div class="column is-one-quarter">
-                    <a href="https://songwhip.com/rodolphe-burger/good-alive" target="_blank">
-                        <img src="/static/img/album_good.webp" alt="" />
-                    </a>
-                </div>
-                <div class="column is-one-quarter">
-                    <a href="https://songwhip.com/coeur-de-pirate/en-cas-de-tempete-ce-jardin-sera-ferme"
-                        target="_blank">
-                        <img src="/static/img/album_tempete.webp" alt="" />
-                    </a>
-                </div>
-                <div class="column is-one-quarter">
-                    <a href="https://songwhip.com/daft-punk/random-access-memories" target="_blank">
-                        <img src="/static/img/album_ram.webp" alt="" />
-                    </a>
-                </div>
-                <div class="column is-one-quarter">
-                    <a href="https://songwhip.com/stupeflip/stup-virus-2017" target="_blank">
-                        <img src="/static/img/album_stup.webp" alt="" />
-                    </a>
-                </div>
-            </div>
-
-            <h2 class="is-size-4">My favorite movies</h2>
-
-            <div class="columns is-multiline mt-1">
-                <div class="column is-one-quarter">
-                    <a href="https://www.themoviedb.org/movie/414906-the-batman" target="_blank"> <img
-                            src="/static/img/movie_batman.jpeg" alt="" /></a>
-                </div>
-                <div class="column is-one-quarter">
-                    <a href="https://www.themoviedb.org/movie/496243" target="_blank"> <img
-                            src="/static/img/movie_parasite.jpeg" alt="" /></a>
-                </div>
-                <div class="column is-one-quarter">
-                    <a href="https://www.themoviedb.org/movie/68730-silence" target="_blank"> <img
-                            src="/static/img/movie_silence.jpeg" alt="" /></a>
-                </div>
-                <div class="column is-one-quarter">
-                    <a href="https://www.themoviedb.org/movie/13223-gran-torino" target="_blank"> <img
-                            src="/static/img/movie_torino.jpeg" alt="" /></a>
-                </div>
-            </div>
-
-            <h2 class="is-size-4">My favorite tv shows</h2>
-
-            <div class="columns is-multiline mt-1">
-                <div class="column is-one-quarter">
-                    <a href="https://www.themoviedb.org/tv/63247-westworld" target="_blank"> <img
-                            src="/static/img/tv_westworld.jpeg" alt="" /></a>
-                </div>
-                <div class="column is-one-quarter">
-                    <a href="https://www.themoviedb.org/tv/62476-le-bureau-des-l-gendes" target="_blank"> <img
-                            src="/static/img/tv_lbdl.jpeg" alt="" /></a>
-                </div>
-                <div class="column is-one-quarter">
-                    <a href="https://www.themoviedb.org/tv/19885-sherlock" target="_blank"> <img
-                            src="/static/img/tv_sherlock.jpeg" alt="" /></a>
-                </div>
-                <div class="column is-one-quarter">
-                    <a href="https://www.themoviedb.org/tv/894-the-prisoner" target="_blank"> <img
-                            src="/static/img/tv_prisonnier.jpeg" alt="" /></a>
-                </div>
-            </div>
-
+        <div class="columns is-multiline mt-1">
+          <div class="column is-one-quarter">
+            <a href="https://songwhip.com/rodolphe-burger/good-alive" target="_blank">
+              <img src="/static/img/album_good.webp" alt="" />
+            </a>
+          </div>
+          <div class="column is-one-quarter">
+            <a href="https://songwhip.com/coeur-de-pirate/en-cas-de-tempete-ce-jardin-sera-ferme" target="_blank">
+              <img src="/static/img/album_tempete.webp" alt="" />
+            </a>
+          </div>
+          <div class="column is-one-quarter">
+            <a href="https://songwhip.com/daft-punk/random-access-memories" target="_blank">
+              <img src="/static/img/album_ram.webp" alt="" />
+            </a>
+          </div>
+          <div class="column is-one-quarter">
+            <a href="https://songwhip.com/stupeflip/stup-virus-2017" target="_blank">
+              <img src="/static/img/album_stup.webp" alt="" />
+            </a>
+          </div>
         </div>
-    </section>
-</body>
 
+        <h2 class="is-size-4">My favorite movies</h2>
+
+        <div class="columns is-multiline mt-1">
+          <div class="column is-one-quarter">
+            <a href="https://www.themoviedb.org/movie/414906-the-batman" target="_blank"> <img src="/static/img/movie_batman.jpeg" alt="" /></a>
+          </div>
+          <div class="column is-one-quarter">
+            <a href="https://www.themoviedb.org/movie/496243" target="_blank"> <img src="/static/img/movie_parasite.jpeg" alt="" /></a>
+          </div>
+          <div class="column is-one-quarter">
+            <a href="https://www.themoviedb.org/movie/68730-silence" target="_blank"> <img src="/static/img/movie_silence.jpeg" alt="" /></a>
+          </div>
+          <div class="column is-one-quarter">
+            <a href="https://www.themoviedb.org/movie/13223-gran-torino" target="_blank"> <img src="/static/img/movie_torino.jpeg" alt="" /></a>
+          </div>
+        </div>
+
+        <h2 class="is-size-4">My favorite tv shows</h2>
+
+        <div class="columns is-multiline mt-1">
+          <div class="column is-one-quarter">
+            <a href="https://www.themoviedb.org/tv/63247-westworld" target="_blank"> <img src="/static/img/tv_westworld.jpeg" alt="" /></a>
+          </div>
+          <div class="column is-one-quarter">
+            <a href="https://www.themoviedb.org/tv/62476-le-bureau-des-l-gendes" target="_blank"> <img src="/static/img/tv_lbdl.jpeg" alt="" /></a>
+          </div>
+          <div class="column is-one-quarter">
+            <a href="https://www.themoviedb.org/tv/19885-sherlock" target="_blank"> <img src="/static/img/tv_sherlock.jpeg" alt="" /></a>
+          </div>
+          <div class="column is-one-quarter">
+            <a href="https://www.themoviedb.org/tv/894-the-prisoner" target="_blank"> <img src="/static/img/tv_prisonnier.jpeg" alt="" /></a>
+          </div>
+        </div>
+      </div>
+    </section>
+  </body>
 </html>
