--- a/resume.html
+++ b/resume.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en" style="width: 100%; height: 100%">
-
-<head>
+  <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <title>Kahlys</title>
-</head>
+  </head>
 
-<body style="width: 100%; height: 100%; margin: 0">
+  <body style="width: 100%; height: 100%; margin: 0">
     <iframe
-        src="https://docs.google.com/gview?url=https://github.com/kahlys/kahlys.github.io/raw/main/static/resume_eng.pdf&embedded=true"
-        style="width: 100%; height: 100%" frameborder="0">
+      src="https://docs.google.com/gview?url=https://github.com/kahlys/kahlys.github.io/raw/main/static/resume_eng.pdf&embedded=true"
+      style="width: 100%; height: 100%"
+      frameborder="0"
+    >
     </iframe>
-</body>
-
+  </body>
 </html>
