--- a/index.html
+++ b/index.html
@@ -79,7 +79,6 @@
           <h1 class="title">Recommendations</h1>
 
           <h2 class="is-size-4">My favorite music albums</h2>
-
           <div class="columns is-multiline mt-1">
             <div v-for="album in reco.music" class="column is-one-quarter">
               <a v-bind:href="album.link" target="_blank">
@@ -89,36 +88,16 @@
           </div>
 
           <h2 class="is-size-4">My favorite movies</h2>
-
           <div class="columns is-multiline mt-1">
-            <div class="column is-one-quarter">
-              <a href="https://www.themoviedb.org/movie/414906-the-batman" target="_blank"> <img src="/static/img/movie_batman.jpeg" alt="" /></a>
-            </div>
-            <div class="column is-one-quarter">
-              <a href="https://www.themoviedb.org/movie/496243" target="_blank"> <img src="/static/img/movie_parasite.jpeg" alt="" /></a>
-            </div>
-            <div class="column is-one-quarter">
-              <a href="https://www.themoviedb.org/movie/68730-silence" target="_blank"> <img src="/static/img/movie_silence.jpeg" alt="" /></a>
-            </div>
-            <div class="column is-one-quarter">
-              <a href="https://www.themoviedb.org/movie/13223-gran-torino" target="_blank"> <img src="/static/img/movie_torino.jpeg" alt="" /></a>
+            <div v-for="movie in reco.movie" class="column is-one-quarter">
+              <a v-bind:href="movie.link" target="_blank"> <img v-bind:src="movie.img" alt="" /></a>
             </div>
           </div>
 
           <h2 class="is-size-4">My favorite tv shows</h2>
-
           <div class="columns is-multiline mt-1">
-            <div class="column is-one-quarter">
-              <a href="https://www.themoviedb.org/tv/63247-westworld" target="_blank"> <img src="/static/img/tv_westworld.jpeg" alt="" /></a>
-            </div>
-            <div class="column is-one-quarter">
-              <a href="https://www.themoviedb.org/tv/62476-le-bureau-des-l-gendes" target="_blank"> <img src="/static/img/tv_lbdl.jpeg" alt="" /></a>
-            </div>
-            <div class="column is-one-quarter">
-              <a href="https://www.themoviedb.org/tv/19885-sherlock" target="_blank"> <img src="/static/img/tv_sherlock.jpeg" alt="" /></a>
-            </div>
-            <div class="column is-one-quarter">
-              <a href="https://www.themoviedb.org/tv/894-the-prisoner" target="_blank"> <img src="/static/img/tv_prisonnier.jpeg" alt="" /></a>
+            <div v-for="show in reco.tv" class="column is-one-quarter">
+              <a v-bind:href="show.link" target="_blank"> <img v-bind:src="show.img" alt="" /></a>
             </div>
           </div>
         </div>
@@ -135,6 +114,18 @@
               { img: "/static/img/album_tempete.webp", link: "https://songwhip.com/coeur-de-pirate/en-cas-de-tempete-ce-jardin-sera-ferme" },
               { img: "/static/img/album_ram.webp", link: "https://songwhip.com/daft-punk/random-access-memories" },
               { img: "/static/img/album_stup.webp", link: "https://songwhip.com/stupeflip/stup-virus-2017" },
+            ],
+            movie: [
+              { img: "/static/img/movie_batman.jpeg", link: "https://www.themoviedb.org/movie/414906-the-batman" },
+              { img: "/static/img/movie_parasite.jpeg", link: "https://www.themoviedb.org/movie/496243" },
+              { img: "/static/img/movie_silence.jpeg", link: "https://www.themoviedb.org/movie/68730-silence" },
+              { img: "/static/img/movie_torino.jpeg", link: "https://www.themoviedb.org/movie/13223-gran-torino" },
+            ],
+            tv: [
+              { img: "/static/img/tv_westworld.jpeg", link: "https://www.themoviedb.org/tv/63247-westworld" },
+              { img: "/static/img/tv_lbdl.jpeg", link: "https://www.themoviedb.org/tv/62476-le-bureau-des-l-gendes" },
+              { img: "/static/img/tv_sherlock.jpeg", link: "https://www.themoviedb.org/tv/19885-sherlock" },
+              { img: "/static/img/tv_prisonnier.jpeg", link: "https://www.themoviedb.org/tv/894-the-prisoner" },
             ],
           },
         },
