--- a/project.html
+++ b/project.html
@@ -7,6 +7,20 @@
     <title>Kahlys</title>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css" />
+
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.0"></script>
+
+    <style>
+      .card {
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+      }
+
+      .card-content {
+        height: 100%;
+      }
+    </style>
   </head>
 
   <body>
@@ -33,11 +47,40 @@
       </div>
     </nav>
 
-    <section class="section">
-      <div class="container">
-        <h1 class="title">Project</h1>
-      </div>
-    </section>
+    <div id="app">
+      <section class="section">
+        <div class="container">
+          <h1 class="title">Personal</h1>
+        </div>
+      </section>
+
+      <section class="section">
+        <div class="container">
+          <h1 class="title">Professional</h1>
+
+          <div class="columns">
+            <div v-for="p in projects.pro" class="column is-one-quarter">
+              <div class="card">
+                <div class="card-image">
+                  <figure class="image"><img v-bind:src="p.image" alt="Placeholder image" /></figure>
+                </div>
+                <div class="card-content">
+                  <div class="content">
+                    <p><b>{{p.post}}</b></p>
+                    <p>{{p.desc}}</p>
+                  </div>
+                </div>
+                <nav class="breadcrumb is-centered pb-2" aria-label="breadcrumbs">
+                  <ul>
+                    <li v-for="l in p.links"><a v-bind:href="l.ref" target="_blank">{{l.name}}</a></li>
+                  </ul>
+                </nav>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </div>
 
     <script>
       document.addEventListener("DOMContentLoaded", () => {
@@ -53,6 +96,36 @@
             });
           });
         }
+      });
+    </script>
+
+    <script>
+      var app = new Vue({
+        el: "#app",
+        data: {
+          projects: {
+            pro: [
+              {
+                post: "Golang developer & Cryptographer",
+                desc: "secure end-to-end mobile communications on consumer devices",
+                image: "static/img/cryptosmart.webp",
+                links: [
+                  { name: "Website", ref: "https://www.ercom.com/" },
+                  { name: "Video", ref: "https://www.youtube.com/watch?v=3vLFcElgAqU" },
+                ],
+              },
+              {
+                post: "Cryptographer internship",
+                desc: "secure file sharing and collaboraive work in the cloud",
+                image: "static/img/cryptobox.webp",
+                links: [
+                  { name: "Website", ref: "https://www.ercom.com/" },
+                  { name: "Video", ref: "https://www.youtube.com/watch?v=x_bZOwlZcyg" },
+                ],
+              },
+            ],
+          },
+        },
       });
     </script>
   </body>
