--- a/index.html
+++ b/index.html
@@ -53,17 +53,15 @@
         <div class="container">
           <div class="columns is-variable is-8">
             <div class="column is-one-third">
-              <img src="static/img/gopher3.png" alt="" />
+              <img src="static/img/gopher.png" alt="gopher" />
             </div>
             <div class="column">
-              <div class="community">
-                <h1 class="title">Bio</h1>
-                <p class="is-size-5">
-                  I am a Golang developer with algebra background. I have a Master in Mathematics, Computer Science and Cryptology at Université de
-                  Paris. Since my first professional experience, I have been in love with the Go langage, but I am also interested in cryptology and
-                  data science. In my spare time I like writing orchestral cinematic music.
-                </p>
-              </div>
+              <h1 class="title">Bio</h1>
+              <p class="is-size-5">
+                I am a Golang developer with algebra background. I have a Master in Mathematics, Computer Science and Cryptology at Université de
+                Paris. Since my first professional experience, I have been in love with the Go langage, but I am also interested in cryptology and
+                data science. In my spare time I like writing orchestral cinematic music.
+              </p>
             </div>
           </div>
         </div>
