bio social links

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Kahlys</title>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
 
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.0"></script>
 
@@ -62,6 +63,33 @@
                 Paris. Since my first professional experience, I have been in love with the Go langage, but I am also interested in cryptology and
                 data science. In my spare time I like writing orchestral cinematic music.
               </p>
+              <br />
+              <div class="field is-grouped">
+                <p class="control">
+                  <a href="https://github.com/kahlys" target="_blank" class="button is-medium">
+                    <span class="icon is-large">
+                      <i style="color: #161b22" class="fa-brands fa-github fa-xl"></i>
+                    </span>
+                    <span>GitHub</span>
+                  </a>
+                </p>
+                <p class="control">
+                  <a href="https://www.linkedin.com/in/youenn-laborde-152a0786/" target="_blank" class="button is-medium">
+                    <span class="icon is-large">
+                      <i style="color: #0a66c2" class="fa-brands fa-linkedin fa-xl"></i>
+                    </span>
+                    <span>LinkedIn</span>
+                  </a>
+                </p>
+                <p class="control">
+                  <a href="https://soundcloud.com/kahlys" target="_blank" class="button is-medium">
+                    <span class="icon is-large">
+                      <i style="color: #f50" class="fa-brands fa-soundcloud fa-xl"></i>
+                    </span>
+                    <span>SoundCloud</span>
+                  </a>
+                </p>
+              </div>
             </div>
           </div>
         </div>
