project perso baywatch

--- a/project.html
+++ b/project.html
@@ -136,6 +136,13 @@
                   { name: "Github", ref: "https://github.com/sQuiz-2" },
                 ],
               },
+              {
+                title: "baywatch",
+                post: "personal",
+                desc: "Profile a containerized workload with various CPU configurations",
+                image: "static/img/baywatch.webp",
+                links: [{ name: "Github", ref: "https://github.com/kahlys/baywatch" }],
+              },
             ],
             pro: [
               {
