fix buttons group

--- a/index.html
+++ b/index.html
@@ -64,31 +64,25 @@
                 data science. In my spare time I like writing orchestral cinematic music.
               </p>
               <br />
-              <div class="field is-grouped">
-                <p class="control">
-                  <a href="https://github.com/kahlys" target="_blank" class="button is-medium">
-                    <span class="icon is-large">
-                      <i style="color: #161b22" class="fa-brands fa-github fa-xl"></i>
-                    </span>
-                    <span>GitHub</span>
-                  </a>
-                </p>
-                <p class="control">
-                  <a href="https://www.linkedin.com/in/youenn-laborde-152a0786/" target="_blank" class="button is-medium">
-                    <span class="icon is-large">
-                      <i style="color: #0a66c2" class="fa-brands fa-linkedin fa-xl"></i>
-                    </span>
-                    <span>LinkedIn</span>
-                  </a>
-                </p>
-                <p class="control">
-                  <a href="https://soundcloud.com/kahlys" target="_blank" class="button is-medium">
-                    <span class="icon is-large">
-                      <i style="color: #f50" class="fa-brands fa-soundcloud fa-xl"></i>
-                    </span>
-                    <span>SoundCloud</span>
-                  </a>
-                </p>
+              <div class="buttons">
+                <a href="https://github.com/kahlys" target="_blank" class="button is-medium">
+                  <span class="icon is-large">
+                    <i style="color: #161b22" class="fa-brands fa-github fa-xl"></i>
+                  </span>
+                  <span>GitHub</span>
+                </a>
+                <a href="https://www.linkedin.com/in/youenn-laborde-152a0786/" target="_blank" class="button is-medium">
+                  <span class="icon is-large">
+                    <i style="color: #0a66c2" class="fa-brands fa-linkedin fa-xl"></i>
+                  </span>
+                  <span>LinkedIn</span>
+                </a>
+                <a href="https://soundcloud.com/kahlys" target="_blank" class="button is-medium">
+                  <span class="icon is-large">
+                    <i style="color: #f50" class="fa-brands fa-soundcloud fa-xl"></i>
+                  </span>
+                  <span>SoundCloud</span>
+                </a>
               </div>
             </div>
           </div>
