project perso seven wonders

--- a/project.html
+++ b/project.html
@@ -137,6 +137,13 @@
                 ],
               },
               {
+                title: "7 Wonders Score Sheet",
+                post: "personal",
+                desc: "A score sheet app for the boardgame '7 Wonders' in flutter/dart",
+                image: "static/img/wonders.webp",
+                links: [{ name: "Github", ref: "https://github.com/kahlys/sevenwonders" }],
+              },
+              {
                 title: "baywatch",
                 post: "personal",
                 desc: "Profile a containerized workload with various CPU configurations",
